--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="bg-gradient-to-r from-gray-200 to-sky-200 font-mono" lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ConvoAI</title>
+    <link href="{{url_for('static',filename='css/main.css')}}" rel="stylesheet">
 </head>
+
 <body>
-    <h1 class="text-red">Hi, there!!</h1>
+    <h1 class="p-5 text-sky-700 text-center text-5xl">Welcome to ConvoAI!</h1>
+    <div class="flex flex-col justify-center items-center">
+        <button
+        class="text-sky-600 hover:text-white border border-sky-600 hover:bg-sky-700 focus:ring-4 focus:outline-none focus:ring-sky-500 font-medium rounded-lg text-md px-5 py-2.5 text-center me-2 mb-32 mt-4">Click
+        to begin recording</button>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+        <div class="bg-sky-700 p-2 border border-2 rounded-lg border-gray-200 w-1/2">
+            <p class="text-white text-lg">
+                Question: What are your best qualities?
+            </p>
+            <p class="text-white text-right text-lg">
+                Answer: Calculating...
+            </p>
+        </div>
+    </div>
 </body>
+
 </html>
